--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
   <img id="on-off" src="img/white_lamp.png" alt="spenta">
   <img class="hide" id="off-on" src="img/yellow_lamp.png" alt="accesa">
-  <button id="button">ON/OFF</button>
+  <br>
+  <button id="button">ACCENDI</button>
 
   <script src="script.js"></script>
 </body>
